@@ -2,6 +2,8 @@
 
 div.timer {display: none;}
 
+.caption_title {font-size:16px;}
+
 .slider_nav {
 	height: 50px;
 	width: 99.8%;
