@@ -22,6 +22,10 @@ a{outline:none}
 
 #register li {float: right; display: block; padding-left: 5px;}
 
+#content {*margin-left: 0px; *margin-top: 15px;}
+
+#sidebar {*margin-top: 15px;}
+
 #container {
 	margin-left: auto;
 	margin-right: auto;
@@ -303,6 +307,7 @@ ol, ul {list-style-position: inside;margin-left: 21px;}
 	color: #fff;
 	margin-top: 15px;
 	margin-bottom: 10px;
+	*margin-left: 3.3%;
 }
 
 .footer-widget-title {
