@@ -160,6 +160,7 @@ TEMPLATE_URL . '/images/social/thumbs/icons-default.png' ), 'default' => 'defaul
 		->subsection_end()
 		->section("Templates")
 		->subsection("Single Post")
+			->checkbox($themeslug."_single_show_featured_images", "Featured Images")
 			->checkbox($themeslug."_single_post_formats", "Post Format Icons",  array('default' => true))
 			->multicheck($themeslug."_single_hide_byline", "Post Byline Elements", array( 'options' => array($themeslug."_hide_author" => "Author" , $themeslug."_hide_categories" => "Categories", $themeslug."_hide_date" => "Date", $themeslug."_hide_comments" => "Comments", $themeslug."_hide_share" => "Share", $themeslug."_hide_tags" => "Tags"), 'default' => array( $themeslug."_hide_tags" => true, $themeslug."_hide_share" => true, $themeslug."_hide_author" => true, $themeslug."_hide_date" => true, $themeslug."_hide_comments" => true, $themeslug."_hide_categories" => true ) ) )
 			->checkbox($themeslug."_single_show_fb_like", "Facebook Like Button")
@@ -168,6 +169,7 @@ TEMPLATE_URL . '/images/social/thumbs/icons-default.png' ), 'default' => 'defaul
 		->subsection_end()	
 		->subsection("Archive")
 			->checkbox($themeslug."_archive_show_excerpts", "Post Excerpts", array('default' => true))
+			->checkbox($themeslug."_archive_show_featured_images", "Featured Images")
 			->checkbox($themeslug."_archive_post_formats", "Post Format Icons",  array('default' => true))
 			->multicheck($themeslug."_archive_hide_byline", "Post Byline Elements", array( 'options' => array($themeslug."_hide_author" => "Author" , $themeslug."_hide_categories" => "Categories", $themeslug."_hide_date" => "Date", $themeslug."_hide_comments" => "Comments", $themeslug."_hide_share" => "Share", $themeslug."_hide_tags" => "Tags"), 'default' => array( $themeslug."_hide_tags" => true, $themeslug."_hide_share" => true, $themeslug."_hide_author" => true, $themeslug."_hide_date" => true, $themeslug."_hide_comments" => true, $themeslug."_hide_categories" => true ) ) )
 			->checkbox($themeslug."_archive_show_fb_like", "Facebook Like Button")
